--- a/ProyectoDelGrupoDWS2/src/main/resources/templates/paginaAdministradora.html
+++ b/ProyectoDelGrupoDWS2/src/main/resources/templates/paginaAdministradora.html
@@ -9,26 +9,36 @@
 	rel="stylesheet"
 	integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
 	crossorigin="anonymous" />
-<link rel="stylesheet" href="cs.css" />
+<link rel="stylesheet" th:href="@{/css/cs.css}" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 	<nav class="navegador2">
-		<a href="index.html"> <svg xmlns="http://www.w3.org/2000/svg"
+		<!-- Enlace a la página principal con Thymeleaf -->
+		<a th:href="@{/}"> <svg xmlns="http://www.w3.org/2000/svg"
 				width="60" height="60" fill="currentColor"
 				class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
-          <path fill-rule="evenodd"
+                <path fill-rule="evenodd"
 					d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z" />
-        </svg>
+            </svg>
 		</a>
 		<h1>ZONA ADMINISTRATIVA</h1>
 	</nav>
+
 	<main class="container w-100">
 		<div class="row w-100 h-100 zonaA">
-			<div class="col zonaB ususarios">
+
+			<div class="col  zonaB ususarios">
 				<h1 class="tituloUsuarios">USUARIOS</h1>
 
 				<div class="contenedorUsuarios">
+					<!-- Lista de usuarios usando Thymeleaf -->
+					<!-- 					<div th:each="usuario : ${usuarios}" class="contenidoUsuarios"> -->
+					<!-- 						<p th:text="${usuario.alias}" class="alias"></p> -->
+					<!-- 						<p th:text="${usuario.dni}" class="DNI"></p> -->
+					<!-- 						<button class="eliminarUsu">Eliminar</button> -->
+					<!-- 						<button class="modificarUsu">Modificar</button> -->
+					<!-- 					</div> -->
 					<div class="contenidoUsuarios">
 						<p class="alias">ALIAS</p>
 						<p class="DNI">DNI</p>
@@ -83,12 +93,21 @@
 						<button class="eliminarUsu">ELiminar</button>
 						<button class="modificarUsu">Modificar</button>
 					</div>
+
 				</div>
 				<button class="aniadirUsuario">AÑADIR USUARIO</button>
 			</div>
+
 			<div class="col zonaB club">
 				<h1 class="tituloClub">CLUB</h1>
 				<div class="contenedorClub">
+					<!-- Lista de clubes usando Thymeleaf -->
+					<!-- 					<div th:each="club : ${clubs}" class="contenidoClub"> -->
+					<!-- 						<p th:text="${club.nombre}" class="alias"></p> -->
+					<!-- 						<p th:text="${club.sede}" class="DNI"></p> -->
+					<!-- 						<button class="eliminaClub">Eliminar</button> -->
+					<!-- 						<button class="modificaClub">Modificar</button> -->
+					<!-- 					</div> -->
 					<div class="contenidoClub">
 						<p class="alias">NOMBRE</p>
 						<p class="DNI">SEDE</p>
@@ -148,10 +167,13 @@
 			</div>
 		</div>
 	</main>
+
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 		crossorigin="anonymous"></script>
-	<script src="javascript.js"></script>
+
+	<!-- Enlaza el script JavaScript con Thymeleaf -->
+	<script th:src="@{/javascript.js}"></script>
 </body>
 </html>
