Cambiar de responeEntity a response

--- a/ProyectoDelGrupoDWS2/src/main/resources/templates/login.html
+++ b/ProyectoDelGrupoDWS2/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
 			<div class="col zonaLoginForm">
 
 				<!-- Formulario con Thymeleaf -->
-				<form class="w-100 formulario" th:action="@{/login}" method="post">
+				<form class="w-100 formulario" th:action="@{/login/enviarDatos}" method="post">
 					<h1 class="nombreLogin">LOGIN</h1>
 					<div class="contenidoLogin">
 						<div class="divCorreo">
