--- a/ProyectoDelGrupoDWS2/src/main/webapp/css/cs.css
+++ b/ProyectoDelGrupoDWS2/src/main/webapp/css/cs.css
@@ -102,6 +102,10 @@ svg:hover {
 .botonAdmin:not(:hover) {
 	box-shadow: 0px 0px 0px white;
 }
+
+.hidden {
+	display: none;
+}
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
 /* PARTE DE LA PAGINA DE ADMINISTRADORES */
